# Schwarz-4-Multiscale

./: .gitignore  README.md  test.sbatch  test_jinny.sbatch
AdvectionDiffusion/Coupling/PINN/: README.md  dummy.txt  pyproject.toml
AdvectionDiffusion/Coupling/PINN/cases/example/: input.csv  input_hyperopt.yaml  input_single.yaml
AdvectionDiffusion/Coupling/PINN/pinnschwarz/: README.md  driver.py  driver_packed.py  driver_ray.py  driver_schwarz.py  hyper.yaml  opt_PINN.py  opt_schwarz.py  optimizer.py  pde.py  pinn.py  trainer.py  utils.py
Contact/Dynamic/: A_function.m  A_function_Lin.m  AllOperators.m  CarpenterDriver.m  Constitutive_Linear_Elastic.m  Driver.m  Driver_run_tests.m  Element.m  FEMAssembly.m  GaussSeidel.m  Operators.m  SchwarzMethod.m  SetupSchwarz.m  Tests.m  TopLevelLagrange_Accel.m  TopLevelLagrange_Disp.m  TopLevelLagrange_Disp_Jon.m  TopLevelLagrange_Vel.m  TopLevelSchwarz.m  TopLevelSchwarz_oscillations.m  Update_mesh_and_load_vector.m  compare_contact_methods.m  compute_contact_method_convergence.py  convert_to_json.py  lagrange_explicit.m  lagrange_implicit.m  lagrange_implicit_accel.m  newmark_iterative.m  penalty_explicit.m  penalty_implicit.m
Contact/Dynamic/input/: 2sd_NS_L-v0_L0.25_t10-7_EXP-R-v200_L0.5_t10-7_EXP.yaml  2sd_NS_L-v0_L0.25_t10-7_IMP-R-v200_L0.25_t10-7_IMP.yaml  2sd_NS_L-v0_L0.25_t10-7_IMP-R-v200_L0.5_t10-7_IMP.yaml  2sd_NS_L-v100_L0.25_t10-7_EXP-R-v100_L0.5_t10-7_EXP.yaml  2sd_NS_L-v100_L0.25_t10-7_IMP-R-v100_L0.5_t10-7_IMP.yaml  2sd_S_L-v100_L0.25_t10-7_IMP-R-v100_L0.25_t10-7_IMP.yaml
(+41 files in other folders)
