[project]
name = "pinnschwarz"
version = "0.1"
authors = [
	{name = "Christopher R. Wentland"},
	{email = "crwentl@sandia.gov"}
]
description = "PINN Schwarz coupling, originally developed by Will Snyder"
readme = "README.md"

requires-python = ">=3.6"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "tensorflow",
]

[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pinnschwarz"]
