[project]
name = "pinnschwarz"
version = "0.1"
authors = [
	{name = "Christopher R. Wentland"},
	{email = "crwentl@sandia.gov"}
]
description = "PINN Schwarz coupling, originally developed by Will Snyder"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.7",
    "numpy",
    "matplotlib",
    "ray[tune]",
    "pyyaml",
    "black",
]

[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pinnschwarz"]

[tool.black]
line-length = 120
target-version = ['py39']
